Closed Bug 1827604 Opened 3 years ago Closed 3 years ago

The letter after an apostrophe should not be affected by text-transform:capitalize

Categories

(Core :: Layout: Text and Fonts, defect)

defect

Tracking

()

RESOLVED FIXED
114 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox112 --- unaffected
firefox113 --- fixed
firefox114 --- fixed

People

(Reporter: jfkthame, Assigned: jfkthame)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

See https://bugzilla.mozilla.org/show_bug.cgi?id=1252962#c4 (spinning this off as a separate bug, as it's not really the same issue as bug 1252962 was about).

The change in bug 208789 improved cases like hyphenated words ("helter-skelter") or period-separated words or letters ("what.three.words", "c.a.g.e."), but we should exclude apostrophe (both the ASCII apostrophe U+0027 and the "curly" Unicode version U+2019) from the heuristics there.

Attached file Demo

Interactive demo

Set release status flags based on info from the regressing bug 208789

Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Duplicate of this bug: 1827629
Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/4fe0b816452a Special-case the apostrophe characters in text-transform:capitalize heuristics. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch

The patch landed in nightly and beta is affected.
:jfkthame, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox113 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(jfkthame)

Comment on attachment 9328152 [details]
Bug 1827604 - Special-case the apostrophe characters in text-transform:capitalize heuristics. r=#layout-reviewers

Beta/Release Uplift Approval Request

  • User impact if declined: Poor result of text-transform:capitalize in a few cases
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Trivial patch to special-case a couple of characters in capitalization processing
  • String changes made/needed:
  • Is Android affected?: Yes
Flags: needinfo?(jfkthame)
Attachment #9328152 - Flags: approval-mozilla-beta?

Comment on attachment 9328152 [details]
Bug 1827604 - Special-case the apostrophe characters in text-transform:capitalize heuristics. r=#layout-reviewers

Approved for 113 beta 4, thanks.

Attachment #9328152 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: