Bug 1827604 - Special-case the apostrophe characters in text-transform:capitalize heuristics. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D175248